FALTA SUBIR REPORTES ESPECIALES

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR,CONSOLA, ARCHIVO
+log4j.rootLogger=INFO,CONSOLA, ARCHIVO
 
 #configuracion consola
 log4j.appender.CONSOLA=org.apache.log4j.ConsoleAppender
