--- a/config/biosis-config.properties
+++ b/config/biosis-config.properties
@@ -1,7 +1,6 @@
-#FICHERO DE CONFIGURACI\u00d3N
-#Fri Mar 06 19:19:52 PET 2015
-url=jdbc\:sqlserver\://192.168.0.101\\JUPITER;databaseName\=enosa_biosis;sendTimeAsDatetime\=false
-#url=jdbc\:sqlserver\://192.168.1.252\\JUPITER;databaseName\=db_biosis_prueba;sendTimeAsDatetime\=false
+#FICHERO DE CONFIGURACIÓN
+#Thu Apr 16 22:06:07 PET 2015
+url=jdbc\:sqlserver\://192.168.0.101\\JUPITER;databaseName\=ensa_biosis;sendTimeAsDatetime\=false
 password=b4K8+5afhjnFe0/vrxM5mQ\=\=
 tipo=1
 usuario=sa
