--- a/config/biostar-config.properties
+++ b/config/biostar-config.properties
@@ -1,6 +1,5 @@
-#FICHERO DE CONFIGURACI\u00d3N
-#Fri Mar 06 19:19:52 PET 2015
-#url=jdbc\:sqlserver\://192.168.1.101\\JUPITER;databaseName\=db_biostar_prueba;sendTimeAsDatetime\=false
+#FICHERO DE CONFIGURACIÓN
+#Thu Apr 16 22:06:07 PET 2015
 url=jdbc\:sqlserver\://192.168.1.252\\JUPITER;databaseName\=db_biostar_prueba;sendTimeAsDatetime\=false
 password=b4K8+5afhjnFe0/vrxM5mQ\=\=
 tipo=1
