ACTUALIZACION SAN MARCOS

--- a/config/biosis-config.properties
+++ b/config/biosis-config.properties
@@ -1,6 +1,6 @@
 #FICHERO DE CONFIGURACI\u00d3N
 #Thu Apr 16 22:06:07 PET 2015
-url=jdbc\:sqlserver\://192.168.56.5\\JUPITER;databaseName\=ensa_biosis;sendTimeAsDatetime\=false
+url=jdbc\:sqlserver\://127.0.0.1\\MSS2005EX;databaseName\=sm_biosis;sendTimeAsDatetime\=false
 password=b4K8+5afhjnFe0/vrxM5mQ\=\=
 tipo=1
 usuario=sa
