--- a/pom.xml
+++ b/pom.xml
@@ -133,5 +133,5 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-    <name>ENOSA-BiosisLite</name>
+    <name>SM-BiosisLite</name>
 </project>
