--- a/config/biostar-config.properties
+++ b/config/biostar-config.properties
@@ -1,6 +1,6 @@
 #FICHERO DE CONFIGURACIÓN
-#Thu Apr 16 22:06:07 PET 2015
-url=jdbc\:sqlserver\://192.168.1.252\\JUPITER;databaseName\=db_biostar_prueba;sendTimeAsDatetime\=false
+#Thu Jun 04 14:44:58 COT 2015
 password=b4K8+5afhjnFe0/vrxM5mQ\=\=
+url=jdbc\:sqlserver\://192.168.1.252\\JUPITER;databaseName\=db_biostar_prueba;sendTimeAsDatetime\=false
 tipo=1
 usuario=sa
