--- a/pom.xml
+++ b/pom.xml
@@ -97,11 +97,6 @@
             <version>1.2.1</version>
         </dependency>
         <dependency>
-            <groupId>com.personal</groupId>
-            <artifactId>Utiles</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.jgoodies</groupId>
             <artifactId>looks</artifactId>
             <version>2.2.2</version>
@@ -126,6 +121,16 @@
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.personal</groupId>
+            <artifactId>Utiles</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
     <properties>
