--- a/config/biosis-config.properties
+++ b/config/biosis-config.properties
@@ -1,7 +1,12 @@
-#FICHERO DE CONFIGURACIÓN
+#FICHERO DE CONFIGURACI\u00d3N
 #Thu Jun 04 14:44:58 COT 2015
 password=b4K8+5afhjnFe0/vrxM5mQ\=\=
 url=jdbc\:sqlserver\://127.0.0.1\\MSS2005EX;databaseName\=sm_biosis;sendTimeAsDatetime\=false
+#tipo=1
+#usuario=sa
+#action=none
+#url=jdbc\:sqlserver\://DEMOASIST\\BSSERVER;databaseName\=grp_biosis;sendTimeAsDatetime\=false
+#password=qPtVkUIobqo\=
 tipo=1
 usuario=sa
 action=none
