--- a/config/biosis-config.properties
+++ b/config/biosis-config.properties
@@ -1,12 +1,8 @@
 #FICHERO DE CONFIGURACI\u00d3N
-#Thu Jun 04 14:44:58 COT 2015
-password=b4K8+5afhjnFe0/vrxM5mQ\=\=
+#Tue Jun 16 12:29:16 COT 2015
+#url=jdbc\:sqlserver\://192.168.0.101\\JUPITER;databaseName\=ensa_biosis_final;sendTimeAsDatetime\=false
 url=jdbc\:sqlserver\://127.0.0.1\\MSS2005EX;databaseName\=sm_biosis;sendTimeAsDatetime\=false
-#tipo=1
-#usuario=sa
-#action=none
-#url=jdbc\:sqlserver\://DEMOASIST\\BSSERVER;databaseName\=grp_biosis;sendTimeAsDatetime\=false
-#password=qPtVkUIobqo\=
+password=b4K8+5afhjnFe0/vrxM5mQ\=\=
 tipo=1
 usuario=sa
 action=none
