--- a/config/biosis-config_local.properties
+++ b/config/biosis-config_local.properties
@@ -1,4 +1,4 @@
-#FICHERO DE CONFIGURACIÓN
+#FICHERO DE CONFIGURACI\u00d3N
 #Thu Jun 04 14:44:58 COT 2015
 password=b4K8+5afhjnFe0/vrxM5mQ\=\=
 url=jdbc\:sqlserver\://127.0.0.1\\MSS2005EX;databaseName\=sm_biosis;sendTimeAsDatetime\=false
