--- a/config/biosis-config.properties
+++ b/config/biosis-config.properties
@@ -2,6 +2,7 @@
 #Tue Jun 16 12:29:16 COT 2015
 #url=jdbc\:sqlserver\://192.168.0.101\\JUPITER;databaseName\=ensa_biosis_final;sendTimeAsDatetime\=false
 url=jdbc\:sqlserver\://127.0.0.1\\MSS2005EX;databaseName\=sm_biosis;sendTimeAsDatetime\=false
+#url=jdbc\:sqlserver\://192.168.1.252\\JUPITER;databaseName\=ensa_biosis;sendTimeAsDatetime\=false
 password=b4K8+5afhjnFe0/vrxM5mQ\=\=
 tipo=1
 usuario=sa
