--- a/pom.xml
+++ b/pom.xml
@@ -132,11 +132,16 @@
             <artifactId>Utiles</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-    <name>SM-BiosisLite</name>
+    <name>BiosisLite</name>
 </project>
