--- a/config/sisgedo-config.properties
+++ b/config/sisgedo-config.properties
@@ -1,6 +1,6 @@
 #FICHERO DE CONFIGURACI\u00d3N
 #Tue Jun 16 12:29:16 COT 2015
-url=jdbc\:mysql\://127.0.0.1:3306/tramite?zeroDateTimeBehavior=convertToNull
+url=jdbc\:mysql\://172.16.8.99:3306/tramite?zeroDateTimeBehavior=convertToNull
 password=u2K4BMK9CgIPb8dOQvLE1Q==
 tipo=4
-usuario=root
+usuario=rrhh
